--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -100,16 +100,63 @@
           </div>
         </div>
         <div class="pt-5">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque. Tortor vitae purus faucibus ornare suspendisse sed. Nisi vitae suscipit tellus mauris a diam. Felis imperdiet proin fermentum leo vel orci. Ut porttitor leo a diam sollicitudin tempor id eu nisl. Risus feugiat in ante metus dictum. Enim lobortis scelerisque fermentum dui faucibus in ornare quam. Lorem mollis aliquam ut porttitor leo a diam. Elit duis tristique sollicitudin nibh sit. Cum sociis natoque penatibus et magnis dis parturient. Tristique senectus et netus et malesuada fames. Pellentesque diam volutpat commodo sed. Erat nam at lectus urna. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Laoreet non curabitur gravida arcu ac tortor dignissim convallis. Diam vel quam elementum pulvinar etiam. Elit at imperdiet dui accumsan sit amet. Orci sagittis eu volutpat odio facilisis mauris sit.</p>
-          <p>
-            Metus vulputate eu scelerisque felis imperdiet proin fermentum leo vel. Nunc faucibus a pellentesque sit amet. Quam viverra orci sagittis eu volutpat odio facilisis. Ac felis donec et odio pellentesque diam volutpat commodo sed. Etiam tempor orci eu lobortis elementum. Hendrerit gravida rutrum quisque non tellus orci ac auctor. Vestibulum morbi blandit cursus risus at ultrices mi. Mollis nunc sed id semper risus in hendrerit gravida. Nulla at volutpat diam ut venenatis tellus in metus vulputate. Eros donec ac odio tempor orci dapibus. Sed cras ornare arcu dui. Vitae tortor condimentum lacinia quis vel. Nullam ac tortor vitae purus faucibus ornare suspendisse sed. Viverra tellus in hac habitasse platea dictumst. Et egestas quis ipsum suspendisse. Tempus quam pellentesque nec nam aliquam sem et tortor. Tristique nulla aliquet enim tortor. Tempor nec feugiat nisl pretium fusce. Odio morbi quis commodo odio aenean sed.
-          </p><p>
-            Nibh nisl condimentum id venenatis a condimentum vitae sapien. Vitae ultricies leo integer malesuada. Sed enim ut sem viverra. Pretium aenean pharetra magna ac placerat vestibulum lectus mauris. Proin nibh nisl condimentum id venenatis a condimentum. Sed adipiscing diam donec adipiscing tristique risus. Aliquet nec ullamcorper sit amet risus nullam eget felis. Id leo in vitae turpis. Cras sed felis eget velit aliquet sagittis id consectetur. Est ante in nibh mauris cursus. Elit sed vulputate mi sit amet. Ac auctor augue mauris augue neque. Auctor augue mauris augue neque gravida in. Lorem ipsum dolor sit amet. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Lacus vestibulum sed arcu non odio euismod lacinia at. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Integer feugiat scelerisque varius morbi enim nunc. Proin sagittis nisl rhoncus mattis. Elementum sagittis vitae et leo.
-          </p><p>  
-            Amet luctus venenatis lectus magna fringilla. Non enim praesent elementum facilisis leo vel fringilla. Dignissim sodales ut eu sem integer vitae. Odio ut enim blandit volutpat. Vestibulum sed arcu non odio euismod lacinia at quis risus. Nulla pellentesque dignissim enim sit amet venenatis. Porttitor massa id neque aliquam vestibulum. Vitae elementum curabitur vitae nunc sed. Ultrices in iaculis nunc sed augue lacus. Odio aenean sed adipiscing diam donec adipiscing tristique risus nec. Vel facilisis volutpat est velit egestas. Quisque sagittis purus sit amet volutpat consequat mauris. Sed risus pretium quam vulputate dignissim suspendisse in est ante. Convallis tellus id interdum velit. Felis imperdiet proin fermentum leo vel orci.
-          </p><p>  
-            Sed risus pretium quam vulputate dignissim suspendisse. Purus sit amet volutpat consequat mauris nunc. Id cursus metus aliquam eleifend mi in nulla posuere sollicitudin. Iaculis nunc sed augue lacus viverra. Cursus metus aliquam eleifend mi in nulla posuere sollicitudin aliquam. Sed euismod nisi porta lorem mollis. Condimentum vitae sapien pellentesque habitant morbi tristique. Rhoncus est pellentesque elit ullamcorper dignissim. Odio ut sem nulla pharetra diam sit. Eleifend mi in nulla posuere. At urna condimentum mattis pellentesque id nibh.</p>
-        </div>
+		<h4>SECTION 1 – WHAT DO WE DO WITH YOUR INFORMATION?</h4>
+<br/>
+When you purchase something from our store, as part of the buying and selling process, we collect the personal information you give us such as your name, address and email address.
+When you browse our store, we also automatically receive your computer’s internet protocol (IP) address in order to provide us with information that helps us learn about your browser and operating system.
+Email marketing (if applicable): With your permission, we may send you emails about our store, new products and other updates.<br/>
+<br/>
+<h4>SECTION 2 – CONSENT</h4>
+<br/>
+How do you get my consent?
+When you provide us with personal information to complete a transaction, verify your credit card, place an order, arrange for a delivery or return a purchase, we imply that you consent to our collecting it and using it for that specific reason only.
+If we ask for your personal information for a secondary reason, like marketing, we will either ask you directly for your expressed consent, or provide you with an opportunity to say no.
+How do I withdraw my consent?
+If after you opt-in, you change your mind, you may withdraw your consent for us to contact you, for the continued collection, use or disclosure of your information, at anytime, by contacting us at metalooptechnology@gmail.com 
+<br/>
+<br/>
+<h4>SECTION 3 – DISCLOSURE</h4>
+<br/>
+We may disclose your personal information if we are required by law to do so or if you violate our Terms of Service.
+<br/><br/>
+<h4>SECTION 4 – PAYMENT</h4>
+<br/>
+We use online payment for processing payments. We do not store your card data on their servers. The data is encrypted through the Payment Card Industry Data Security Standard (PCI-DSS) when processing payment. Your purchase transaction data is only used as long as is necessary to complete your purchase transaction. After that is complete, your purchase transaction information is not saved.
+Our payment gateway adheres to the standards set by PCI-DSS as managed by the PCI Security Standards Council, which is a joint effort of brands like Visa, MasterCard, American Express and Discover.
+PCI-DSS requirements help ensure the secure handling of credit card information by our store and its service providers.
+<br/><br/>
+<h4>SECTION 5 – THIRD-PARTY SERVICES</h4>
+<br/>
+In general, the third-party providers used by us will only collect, use and disclose your information to the extent necessary to allow them to perform the services they provide to us.
+However, certain third-party service providers, such as payment gateways and other payment transaction processors, have their own privacy policies in respect to the information we are required to provide to them for your purchase-related transactions.
+For these providers, we recommend that you read their privacy policies so you can understand the manner in which your personal information will be handled by these providers.
+In particular, remember that certain providers may be located in or have facilities that are located a different jurisdiction than either you or us. So if you elect to proceed with a transaction that involves the services of a third-party service provider, then your information may become subject to the laws of the jurisdiction(s) in which that service provider or its facilities are located.
+Once you leave our store’s website or are redirected to a third-party website or application, you are no longer governed by this Privacy Policy or our website’s Terms of Service.
+Links
+When you click on links on our store, they may direct you away from our site. We are not responsible for the privacy practices of other sites and encourage you to read their privacy statements.
+<br/><br/>
+<h4>SECTION 6 – SECURITY</h4>
+<br/>
+To protect your personal information, we take reasonable precautions and follow industry best practices to make sure it is not inappropriately lost, misused, accessed, disclosed, altered or destroyed.
+<br/><br/>
+<h4>SECTION 7 – COOKIES</h4>
+<br/>
+We use cookies to maintain session of your user. It is not used to personally identify you on other websites.
+<br/><br/>
+<h4>SECTION 8 – AGE OF CONSENT</h4>
+<br/>
+By using this site, you represent that you are at least the age of majority in your state or province of residence, or that you are the age of majority in your state or province of residence and you have given us your consent to allow any of your minor dependents to use this site.
+<br/><br/>
+<h4>SECTION 9 – CHANGES TO THIS PRIVACY POLICY</h4>
+<br/>
+We reserve the right to modify this privacy policy at any time, so please review it frequently. Changes and clarifications will take effect immediately upon their posting on the website. If we make material changes to this policy, we will notify you here that it has been updated, so that you are aware of what information we collect, how we use it, and under what circumstances, if any, we use and/or disclose it.
+If our store is acquired or merged with another company, your information may be transferred to the new owners so that we may continue to sell products to you.
+<br/><br/>
+<h4>QUESTIONS AND CONTACT INFORMATION</h4>
+<br/>
+If you would like to: access, correct, amend or delete any personal information we have about you, register a complaint, or simply want more information contact our Privacy Compliance Officer at metalooptechnology@gmail.com
+<br/>
+	      </div>
       </div>
     </section>
     
