--- a/wordpress-development.html
+++ b/wordpress-development.html
@@ -99,28 +99,15 @@
               Best Wordpress Development Company in Delhi
             </h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur.
+              We are an experienced WordPress development services company with a knack for creating indigenous WordPress websites. We are into WordPress website development for last 2 years and have worked with multitude of clients for their WordPress website requirements.
             </p>
           </div>
           <div class="col-lg-12">
             <p>
-              It won’t be a bigger problem to find one video game lover in your
-              neighbor. Since the introduction of Virtual Game, it has been
-              achieving great heights so far as its popularity and technological
-              advancement are concerned. The history of video game is as
-              interesting as a fairy tale.
+              In this digital world, WordPress dominates most websites, which makes the WordPress development the most preferred service. Moreover, lately, it has materialized as the most admired web content publishing gateway to offer a gorgeous look to a website as well as to offer the greatest user experience. If you have plans to develop your website through WordPress, come to Metaloop and we’ll offer you a professional development service at the best price.
             </p>
             <p>
-              The quality of today’s video game was not at all there when video
-              game first conceptualized and played ever. During the formulative
-              years, video games were created by using various interactive
-              electronic devices with various display formats. The first ever
-              video game was designed in 1947 by Thomas T. Goldsmith Jr.
+              Our WordPress development services are highly custom-tailored and cost-effective to suit your business requirements. Whether you are a startup, SME, or enterprise, we offer WordPress website designing services to fit businesses of any scale and size. If you have any idea, concept for your next WordPress project, we can help you to realize it.
             </p>
           </div>
         </div>
@@ -128,24 +115,15 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col-md-3">
-            <img src="img/elements/d.jpg" alt="" class="img-fluid" />
+            <img src="img/elements/wp-logo.png" alt="" class="img-fluid" />
           </div>
           <div class="col-md-9 mt-sm-20 left-align-p">
             <h3 class="mb-1">What is Wordpress?</h3>
             <p>
-              Recently, the US Federal government banned online casinos from
-              operating in America by making it illegal to transfer money to
-              them through any US bank or payment system. As a result of this
-              law, most of the popular online casino networks such as Party
-              Gaming and PlayTech left the United States. Overnight, online
-              casino players found themselves being chased by the Federal
-              government. But, after a fortnight, the online casino industry
-              came up with a solution and new online casinos started taking
-              root. These began to operate under a different business umbrella,
-              and by doing that, rendered the transfer of money to and from them
-              legal. A major part of this was enlisting electronic banking
-              systems that would accept this new clarification and start doing
-              business with me.
+              At its core, WordPress is the simplest, most popular way to create your own website or blog. In fact, WordPress powers over 40.0% of all the websites on the Internet. Yes – more than one in four websites that you visit are likely powered by WordPress. On a slightly more technical level, WordPress is an open-source content management system licensed under GPLv2, which means that anyone can use or modify the WordPress software for free. A content management system is basically a tool that makes it easy to manage important aspects of your website.
+            </p>
+            <p>
+              Features include a plugin architecture and a template system, referred to within WordPress as Themes. WordPress was originally created as a blog publishing system but has evolved to support other web content types including more traditional mailing lists and forums, media galleries, membership sites, learning management systems (LMS) and online stores. 
             </p>
           </div>
         </div>
@@ -153,7 +131,7 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col-md-9 mt-sm-20 left-align-p">
-            <h3 class="mb-1">Advantages Of Our Custom PHP Development Services</h3>
+            <h3 class="mb-4">Advantages Of Our Custom Wordpress Development Services</h3>
             <p>
               Recently, the US Federal government banned online casinos from
               operating in America by making it illegal to transfer money to
@@ -171,7 +149,7 @@
             </p>
           </div>
           <div class="col-md-3">
-            <img src="img/elements/d.jpg" alt="" class="img-fluid" />
+            <img src="img/elements/mt-01.png" alt="" class="img-fluid" />
           </div>
         </div>
       </div>
@@ -179,20 +157,14 @@
       <div class="container pt-60">
         <h3 class="mb-10">Services We offer</h3>
         <p class="mb-30">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem
-          ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua
+          We provide a wide variety of the wordpress development service in delhi. We make websites that become a pride for your brand. In our WordPress Development service we will take care of design and development of website. 
         </p>
         <div class="row">
           <div class="col-md-4">
             <div class="single-defination">
-              <h4 class="mb-20">Worpress Web Development</h4>
+              <h4 class="mb-20">PSD to WordPress Conversion</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
+                Have your own designed PSD files for a new WordPress website? Our expert team offers PSD to WordPress Conversion services at an affordable cost to save your time and effort
               </p>
             </div>
           </div>
@@ -200,21 +172,15 @@
             <div class="single-defination">
               <h4 class="mb-20">Wordpress Theme Development</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
+                Ready with a newly purchased WordPress theme but looking for some customization? We are well versed with all the builders and WordPress themes for customization.
               </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="single-defination">
-              <h4 class="mb-20">Custom WordPress Website Development</h4>
+              <h4 class="mb-20">Custom WordPress Development</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
+                We have years of expertise in WordPress Development and backed by an experienced team of WordPress Developers to build a seamlessand engaging website for your business. 
               </p>
             </div>
           </div>
@@ -224,10 +190,7 @@
             <div class="single-defination">
               <h4 class="mb-20">WooCommerce Development</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
+                We offer woocommerce store development service for starting your own e commerce store. Woocommerce is ideal for individuals startups and small setups with low product width.
               </p>
             </div>
           </div>
@@ -235,21 +198,15 @@
             <div class="single-defination">
               <h4 class="mb-20">WordPress Plugin Development</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
+                If you want to develop a WordPress plugin our wordpress development team can help you in developing ypur on customized plugin to fil in any required functionality
               </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="single-defination">
-              <h4 class="mb-20">Wordpress customization & version upgrade</h4>
+              <h4 class="mb-20">Wordpress Maintenance</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
+                Wordpress ebsite requires constant maintenance and updates including plugins themes and security. Our expert WordPress development team can help you in maintain your WordPress site
               </p>
             </div>
           </div>
