--- a/react-dev.html
+++ b/react-dev.html
@@ -109,18 +109,10 @@
           </div>
           <div class="col-lg-12">
             <p>
-              It won’t be a bigger problem to find one video game lover in your
-              neighbor. Since the introduction of Virtual Game, it has been
-              achieving great heights so far as its popularity and technological
-              advancement are concerned. The history of video game is as
-              interesting as a fairy tale.
+              Since React uses virtual DOM, the page renders very smoothly using less time. This improves the user experience and SEO results. The data gets shown in real-time without the need for the page to reload. On Facebook, when you like a post, the number increases immediately without having the page to reload.
             </p>
             <p>
-              The quality of today’s video game was not at all there when video
-              game first conceptualized and played ever. During the formulative
-              years, video games were created by using various interactive
-              electronic devices with various display formats. The first ever
-              video game was designed in 1947 by Thomas T. Goldsmith Jr.
+              React is highly suitable for big projects for the “Single Page Application” way of handling things. Combine React JS with Laravel and you have a very good system to build anything you want. With React JS, the development process works very fast and you see modules getting developed at an incredible pace.
             </p>
           </div>
         </div>
