--- a/about.html
+++ b/about.html
@@ -99,31 +99,18 @@
             <img class="img-fluid" src="img/about-img.png" alt="" />
           </div>
           <div class="col-lg-5 col-md-6 home-about-right">
-            <h6>About Us</h6>
-            <h1 class="text-uppercase">Who We Are</h1>
+            <h6>Who We Are</h6>
+            <h1 class="text-uppercase">We Provide Digital Presence In India</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur.
+              One Destination for all business, Meta loop Technologies is the leading digital agency specializing in target driven digital solutions. Our team is a curious set of entrepreneurs, designers, Developers and management all having nothing in common except for zeal and love towards the possibilities of creating products, services that are utilized and loved by millions. We digitalize your dreams with our designing and development skills.
             </p>
           </div>
           <div class="col-lg-12 pt-60">
             <p>
-              It won’t be a bigger problem to find one video game lover in your
-              neighbor. Since the introduction of Virtual Game, it has been
-              achieving great heights so far as its popularity and technological
-              advancement are concerned. The history of video game is as
-              interesting as a fairy tale.
+              Having served small businesses as well as medium businesses clients, nothing excites us more than the possibility of the next big change being driven by us. From making more than 50+ websites, we are still craving for more and are unitedly walking towards becoming the one stop digital solution company all over the world. We digitalize your dreams and vision to give your business a spectacular online presence with our designing skills.
             </p>
             <p>
-              The quality of today’s video game was not at all there when video
-              game first conceptualized and played ever. During the formulative
-              years, video games were created by using various interactive
-              electronic devices with various display formats. The first ever
-              video game was designed in 1947 by Thomas T. Goldsmith Jr.
+              If you have an idea but are unsure on how it can be realized, come have a coffee with us or if you have an existing brand but wish to drive it further than current markets, call us now ! We are the agency you have always hoped and wished to work with.
             </p>
             <h4 class="pt-30">Technology Expertness</h4>
           </div>
