--- a/faq.html
+++ b/faq.html
@@ -107,45 +107,64 @@
           <div class="col-lg-8">
             <dl class="accordion">
               <dt>
-                <a href="">Dude You Re Getting A Telescope</a>
+                <a href="">What is META loop Technologies?</a>
               </dt>
               <dd>
-                Nunc placerat mi id nisi interdum mollis. Praesent pharetra,
-                justo ut scelerisque mattis, leo quam aliquet diam, congue
-                laoreet elit metus eget diam. Proin ac metus diam.
+                Metaloop Technologies is a service-based company which helps to grow a small, medium and individual business Digitally via providing services. Find the right kind of Strategy and online presence for you and your business, from a verified source and save your time by giving you the perfect solution.
               </dd>
               <dt>
-                <a href="">The Basics Of Buying A Telescope</a>
+                <a href="">How much do you charge for web designing and development?</a>
               </dt>
               <dd>
-                Donec nec justo eget felis facilisis fermentum. Aliquam
-                porttitor mauris sit amet orci. Aenean dignissim pellentesque
-                felis. leo quam aliquet diam, congue laoreet elit metus eget
-                diam.
+                Every website is different from one another in terms of designs and features, but in Metaloop Technologies we understand your requirement and provide you the best solution for your business and we are looking for the offline businesses to make them an online digital platform to make them more effective in terms of business. We have various packages for various businesses; get in touch to choose the right one.
               </dd>
               <dt>
-                <a href="">Astronomy Binoculars A Great Alternative</a>
+                <a href="">Are you design ecommerce websites?</a>
               </dt>
               <dd>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Proin
-                ac metus diam.
+                Yes! We design and develop ecommerce websites. We are specialists in ecommerce business development. We help you with other features which are required in ecomm business and we can build your business Digitally in an standard manner.
               </dd>
               <dt>
-                <a href="">Do Your Self Realizations Quickly Fade</a>
+                <a href="">How long will it take to get a new website?	</a>
               </dt>
               <dd>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Proin
-                ac metus diam.
+                It is hard to say the exact timing for every project. On an average, we take in between Four to eight week turnaround time, but the duration of any project is set by each client as well as the requirements of the project. How much input you can provide during the initial stages, your availability with feedback, how soon the content is ready – all this affects the speed of completion. The functionality also plays a major role in the development – more complex sites will take more time to develop. It all depends which kind of product we are making
               </dd>
               <dt>
-                <a href="">Success Steps For Your Personal Or Business Life</a>
+                <a href="">Do you create WordPress websites?	</a>
               </dt>
               <dd>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Proin
-                ac metus diam.
+                Yes, we create and develop WordPress websites with a great content management system that shows the powers of more than 30% of the web. Its huge market share is due to its flexibility and ease to use. Don’t worry, we’ll teach you how to manage it and help you along the way.
+              </dd>
+              <dt>
+                <a href="">Will I be able to update the site myself when it’s finished?</a>
+              </dt>
+              <dd>
+                Yes! We love to teach our clients to take control of their website completely and we will help you to learn and manage it on our own. We’ll provide you with a set of online Classes to help you learn your way around, as well provide you with a training session to help get you on your way. (Note: We would love to solve your queries and doubts!)
+              </dd>
+              <dt>
+                <a href="">Will you maintain my site for me?	</a>
+              </dt>
+              <dd>
+                Yes we can! We provide on-going support for many of our clients.
+              </dd>
+              <dt>
+                <a href="">Will my website be mobile-friendly?	</a>
+              </dt>
+              <dd>
+                Definitely! Having a mobile-friendly website is more important than a desktop! Everyone has a mobile facility nowadays. Everyone prefers to check your website on mobile first. We work hard to ensure your website looks great on various devices.
+              </dd>
+              <dt>
+                <a href="">Who writes the content for the site?	</a>
+              </dt>
+              <dd>
+                Usually we have a content writer with us. But without your permission we won’t upload anything on your website. We will fix the meeting with you and our content writer so you can brief us about your business. You are the expert on your business, so it’s usually best if it comes from you. Our writer writes original content for you at an additional cost.
+              </dd>
+              <dt>
+                <a href="">What if I need help on my site down the road?	</a>
+              </dt>
+              <dd>
+                We are only a call or email away! We’re here to help you as much or as little as you need, and we won’t disappear once the site is launched. We’ve been doing this for many years, so we aren’t going anywhere anytime soon.
               </dd>
             </dl>
           </div>
