Update Privacy Policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -100,63 +100,48 @@
           </div>
         </div>
         <div class="pt-5">
-		<h4>SECTION 1 – WHAT DO WE DO WITH YOUR INFORMATION?</h4>
-<br/>
-When you purchase something from our store, as part of the buying and selling process, we collect the personal information you give us such as your name, address and email address.
-When you browse our store, we also automatically receive your computer’s internet protocol (IP) address in order to provide us with information that helps us learn about your browser and operating system.
-Email marketing (if applicable): With your permission, we may send you emails about our store, new products and other updates.<br/>
-<br/>
-<h4>SECTION 2 – CONSENT</h4>
-<br/>
-How do you get my consent?
-When you provide us with personal information to complete a transaction, verify your credit card, place an order, arrange for a delivery or return a purchase, we imply that you consent to our collecting it and using it for that specific reason only.
-If we ask for your personal information for a secondary reason, like marketing, we will either ask you directly for your expressed consent, or provide you with an opportunity to say no.
-How do I withdraw my consent?
-If after you opt-in, you change your mind, you may withdraw your consent for us to contact you, for the continued collection, use or disclosure of your information, at anytime, by contacting us at metalooptechnology@gmail.com 
-<br/>
-<br/>
-<h4>SECTION 3 – DISCLOSURE</h4>
-<br/>
-We may disclose your personal information if we are required by law to do so or if you violate our Terms of Service.
-<br/><br/>
-<h4>SECTION 4 – PAYMENT</h4>
-<br/>
-We use online payment for processing payments. We do not store your card data on their servers. The data is encrypted through the Payment Card Industry Data Security Standard (PCI-DSS) when processing payment. Your purchase transaction data is only used as long as is necessary to complete your purchase transaction. After that is complete, your purchase transaction information is not saved.
-Our payment gateway adheres to the standards set by PCI-DSS as managed by the PCI Security Standards Council, which is a joint effort of brands like Visa, MasterCard, American Express and Discover.
-PCI-DSS requirements help ensure the secure handling of credit card information by our store and its service providers.
-<br/><br/>
-<h4>SECTION 5 – THIRD-PARTY SERVICES</h4>
-<br/>
-In general, the third-party providers used by us will only collect, use and disclose your information to the extent necessary to allow them to perform the services they provide to us.
-However, certain third-party service providers, such as payment gateways and other payment transaction processors, have their own privacy policies in respect to the information we are required to provide to them for your purchase-related transactions.
-For these providers, we recommend that you read their privacy policies so you can understand the manner in which your personal information will be handled by these providers.
-In particular, remember that certain providers may be located in or have facilities that are located a different jurisdiction than either you or us. So if you elect to proceed with a transaction that involves the services of a third-party service provider, then your information may become subject to the laws of the jurisdiction(s) in which that service provider or its facilities are located.
-Once you leave our store’s website or are redirected to a third-party website or application, you are no longer governed by this Privacy Policy or our website’s Terms of Service.
-Links
-When you click on links on our store, they may direct you away from our site. We are not responsible for the privacy practices of other sites and encourage you to read their privacy statements.
-<br/><br/>
-<h4>SECTION 6 – SECURITY</h4>
-<br/>
-To protect your personal information, we take reasonable precautions and follow industry best practices to make sure it is not inappropriately lost, misused, accessed, disclosed, altered or destroyed.
-<br/><br/>
-<h4>SECTION 7 – COOKIES</h4>
-<br/>
-We use cookies to maintain session of your user. It is not used to personally identify you on other websites.
-<br/><br/>
-<h4>SECTION 8 – AGE OF CONSENT</h4>
-<br/>
-By using this site, you represent that you are at least the age of majority in your state or province of residence, or that you are the age of majority in your state or province of residence and you have given us your consent to allow any of your minor dependents to use this site.
-<br/><br/>
-<h4>SECTION 9 – CHANGES TO THIS PRIVACY POLICY</h4>
-<br/>
-We reserve the right to modify this privacy policy at any time, so please review it frequently. Changes and clarifications will take effect immediately upon their posting on the website. If we make material changes to this policy, we will notify you here that it has been updated, so that you are aware of what information we collect, how we use it, and under what circumstances, if any, we use and/or disclose it.
-If our store is acquired or merged with another company, your information may be transferred to the new owners so that we may continue to sell products to you.
-<br/><br/>
-<h4>QUESTIONS AND CONTACT INFORMATION</h4>
-<br/>
-If you would like to: access, correct, amend or delete any personal information we have about you, register a complaint, or simply want more information contact our Privacy Compliance Officer at metalooptechnology@gmail.com
-<br/>
-	      </div>
+
+          <strong>Privacy Policy for Metaloop Technologies</strong> 
+          <br/>
+          <p>At Metaloop Technologies , accessible from https://www.Metaloop Technologies .in/, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Metaloop Technologies  and how we use it.
+          <br>
+          If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us through email at metalooptechnologies@gmail.com
+          </p>
+          <br/>
+          <strong>Cookies and Web Beacons</strong>
+          <br/>
+          <p>Like any other website, Metaloop Technologies  uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.</p>
+          <br/>
+          <strong>Privacy Policies</strong>
+          <br/>
+          <p>You may consult this list to find the Privacy Policy for each of the advertising partners of Metaloop Technologies . Our Privacy Policy was created with the help of the Privacy Policy Generator.
+          <br>
+          Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on Metaloop Technologies , which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.
+          <br>
+          Note that Metaloop Technologies  has no access to or control over these cookies that are used by third-party advertisers.</p>
+          <br/>
+          <strong>Third Party Privacy Policies</strong>
+          <br/>
+          <p>Metaloop Technologies 's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. You may find a complete list of these Privacy Policies and their links here: Privacy Policy Links.
+          <br>
+          You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites. What Are Cookies?
+          </p>
+          <br/>
+          <strong>Children's Information</strong>
+          <br/>
+          <p>Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.
+          <br>
+          Metaloop Technologies  does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best to promptly remove such information from our records.</p>
+          <br/>
+          <strong>Online Privacy Policy Only</strong>
+          <br/>
+          <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in Metaloop Technologies . This policy is not applicable to any information collected offline or via channels other than this website.
+          </p>
+          <br/>
+          <strong>Consent</strong>
+          <br/>
+          <p>By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions</p>
+        </div>
       </div>
     </section>
     
