Update Content except service section

--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
             <h6>We are developers</h6>
             <h1>Welcome to Metaloop</h1>
             <p>
-              We partner with brands like yours to create websites your
-              customers will remember, vastly improve your key metrics, and
-              display your brand with pride.We make beautiful websites that
-              sales
+              We are bunch of thinkers, Designers and techies on an aim to delivering great Websites and E-commerce Websites to speed up your business presence digitally.  Whether you are a non-profit or a growing business you know the impact a website can make in this era. Website give your company a digital identity.
             </p>
             <a href="portfolio.html" class="primary-btn text-uppercase"
               >View Our Work
@@ -108,34 +105,25 @@
         <div class="row">
           <div class="col-md-4">
             <div class="single-defination">
-              <h4 class="mb-20">We're specialized</h4>
+              <h4 class="mb-20">Our Specialties</h4>
               <p>
-                Recently, the US Federal government banned online casinos from
-                operating in America by making it illegal to transfer money to
-                them through any US bank or payment system. As a result of this
-                law, most of the popular online casino networks
+                We are completely dynamic towards our client, we work as per requirement. we have the best professionals who not just understand our business process but also have mastered their respective fields of art
               </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="single-defination">
-              <h4 class="mb-20">We focus on results</h4>
+              <h4 class="mb-20">Transparency In Work </h4>
               <p>
-                Recently, the US Federal government banned online casinos from
-                operating in America by making it illegal to transfer money to
-                them through any US bank or payment system. As a result of this
-                law, most of the popular online casino networks
+                We follow a set pattern and an methodology to conduct our tasks more understandable. The work of each of our projects is divided into phases. In the process, we ensure complete transparency and communication with clients. Which help us to deliver a perfect product which u wished for 
               </p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="single-defination">
-              <h4 class="mb-20">We're responsive</h4>
+              <h4 class="mb-20">Quick Delivery</h4>
               <p>
-                Recently, the US Federal government banned online casinos from
-                operating in America by making it illegal to transfer money to
-                them through any US bank or payment system. As a result of this
-                law, most of the popular online casino networks
+                Our term is punctual and professional which define our valued services. As experts, we know the importance of time. Hence, we make sure to deliver our services or products within a given timeframe.
               </p>
             </div>
           </div>
@@ -155,12 +143,7 @@
             <h6>Who We Are</h6>
             <h1 class="text-uppercase neg-20">About Us</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur.
+              Metaloop Technologies is a service-based company which helps to grow a small, medium and individual business Digitally by providing services. Find the right kind of Strategy and online presence for you and your business, from a verified source and save your time by giving you the perfect solution.
             </p>
             <a href="about.html" class="primary-btn text-uppercase"
               >View Full Details</a
@@ -179,8 +162,7 @@
             <div class="title text-center">
               <h1 class="mb-10">Services We Offer</h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Our Experts are highly professional in their work. Working together to deliver the best product to our clients
               </p>
             </div>
           </div>
@@ -294,7 +276,7 @@
           <div class="menu-content pb-70 col-lg-8">
             <div class="title text-center">
               <h1 class="mb-10">Our Latest Projects</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+              <p>We have done tons of projects till the date and we give our best in each of them some examples are as below</p>
             </div>
           </div>
         </div>
