--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
           <div class="menu-content pb-70 col-lg-8">
             <div class="title text-center">
               <h1 class="mb-10">Our Latest Work</h1>
-              <p>Who are in extremely love with eco friendly system.</p>
+              <p>We have done tons of projects till the date and we give our best in each of them some of them are as below</p>
             </div>
           </div>
         </div>
