--- a/services.html
+++ b/services.html
@@ -94,8 +94,7 @@
             <div class="title text-center">
               <h1 class="mb-10">Services We Offer</h1>
               <p>
-                At about this time of year, some months after New Year’s
-                resolutions have been made and kept, or made and neglected.
+                Our Experts are highly professional in their work. Working together to deliver the best product to our clients
               </p>
             </div>
           </div>
