--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
                 <span class="lnr lnr-phone-handset"></span>
               </div>
               <div class="contact-details">
-                <h5>+91 (920) 581 8122</h5>
+                <h5>+91 9560183252</h5>
                 <p>Mon to Fri 9am to 6 pm</p>
               </div>
             </div>
@@ -120,7 +120,7 @@
                 <span class="lnr lnr-envelope"></span>
               </div>
               <div class="contact-details">
-                <h5>metalooptechnology@gmail.com</h5>
+                <h5>metalooptechnologies@gmail.com</h5>
                 <p>Send us your query anytime!</p>
               </div>
             </div>
@@ -277,12 +277,14 @@
                 <li class="whitolo">
                   <i class="fa fa-map-marker"></i> Saket, Delhi, India
                 </li>
-                <li class="whitolo">
+                <a class="whitolo" href="tel:9560183252">
+                <li>
                   <i class="fa fa-phone"></i> +91-9560183252
-                </li>
-                <li class="whitolo">
+                </li></a>
+                <a class="whitolo" href="mailto:metalooptechnologies@gmail.com">
+                <li>
                   <i class="fa fa-envelope"></i> metalooptechnologies@gmail.com
-                </li>
+                </li></a>
               </ul>
             </div>
           </div>
