--- a/react-dev.html
+++ b/react-dev.html
@@ -430,12 +430,14 @@
                 <li class="whitolo">
                   <i class="fa fa-map-marker"></i> Saket, Delhi, India
                 </li>
-                <li class="whitolo">
+                <a class="whitolo" href="tel:9560183252">
+                <li>
                   <i class="fa fa-phone"></i> +91-9560183252
-                </li>
-                <li class="whitolo">
+                </li></a>
+                <a class="whitolo" href="mailto:metalooptechnologies@gmail.com">
+                <li>
                   <i class="fa fa-envelope"></i> metalooptechnologies@gmail.com
-                </li>
+                </li></a>
               </ul>
             </div>
           </div>
