--- a/request-quote.html
+++ b/request-quote.html
@@ -464,12 +464,14 @@
                 <li class="whitolo">
                   <i class="fa fa-map-marker"></i> Saket, Delhi, India
                 </li>
-                <li class="whitolo">
-                  <i class="fa fa-phone"></i> +91-9876543210
-                </li>
-                <li class="whitolo">
-                  <i class="fa fa-envelope"></i> metalooptechnology@gmail.com
-                </li>
+                <a class="whitolo" href="tel:9560183252">
+                <li>
+                  <i class="fa fa-phone"></i> +91-9560183252
+                </li></a>
+                <a class="whitolo" href="mailto:metalooptechnologies@gmail.com">
+                <li>
+                  <i class="fa fa-envelope"></i> metalooptechnologies@gmail.com
+                </li></a>
               </ul>
             </div>
           </div>
