--- a/bootstrap.html
+++ b/bootstrap.html
@@ -319,7 +319,7 @@
               </div>
               <div class="desc">
                 <p>
-                  I Highly recommand metaloop dor their dwvwlopmwnt services as
+                  I Highly recommand metaloop dor their development services as
                   they delivered the project on time and the team is so
                   supporting & experienced in their work of design and
                   development.
