--- a/services.html
+++ b/services.html
@@ -110,7 +110,7 @@
               <span
                 ><img src="img/wordpress.png" width="70" height="70"
               /></span>
-              <a href="#"><h4>Wordpress Development</h4></a>
+              <a href="wordpress-development.html"><h4>Wordpress Development</h4></a>
               <p>
                 Take your business online with a robust CMS and the best
                 WordPress Development Services trusted by countless SMEs,
@@ -121,7 +121,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="single-services">
               <span><img src="img/react.png" width="70" height="70" /></span>
-              <a href="#"><h4>React JS Development</h4></a>
+              <a href="react-dev.html"><h4>React JS Development</h4></a>
               <p>
                 Implement the best React and JavaScript practices to develop an
                 innovative presence on the digital platform with our React
@@ -132,7 +132,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="single-services">
               <span><img src="img/php.png" width="70" height="70" /></span>
-              <a href="#"><h4>Php Development</h4></a>
+              <a href="php-dev.html"><h4>Php Development</h4></a>
               <p>
                 We have excelled in a notable expertise in developing dynamic,
                 high-performance, & database-driven PHP solutions for your
@@ -143,7 +143,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="single-services">
               <span><img src="img/html.png" width="70" height="70" /></span>
-              <a href="#"><h4>HTML Development</h4></a>
+              <a href="html-dev.html"><h4>HTML Development</h4></a>
               <p>
                 HTML5 development services and delivering secure, sustainable
                 and cross-platform web solutions for enterprise belonging to
@@ -156,7 +156,7 @@
               <span
                 ><img src="img/bootstrap.png" width="70" height="70"
               /></span>
-              <a href="#"><h4>Bootstrap Development</h4></a>
+              <a href="bootstrap.html"><h4>Bootstrap Development</h4></a>
               <p>
                 We built essential interface components that make the entire
                 interface easier and make the navigation faster. Our developers
@@ -167,7 +167,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="single-services">
               <span><img src="img/database.png" width="70" height="70" /></span>
-              <a href="#"><h4>Database Management</h4></a>
+              <a href="database-mgt.html"><h4>Database Management</h4></a>
               <p>
                 We offer support for various databases. Our team of certified
                 database experts is continually striving to improve processes
@@ -223,7 +223,7 @@
               </div>
               <div class="desc">
                 <p>
-                  I Highly recommand metaloop dor their dwvwlopmwnt services as
+                  I Highly recommand metaloop dor their development services as
                   they delivered the project on time and the team is so
                   supporting & experienced in their work of design and
                   development.
