--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">Kamal</h5>
+                    <h5 class="card-title">Himanshu</h5>
                     <p class="card-text">Business Development Associate</p>
                   </div>
                 </div>
