--- a/php-dev.html
+++ b/php-dev.html
@@ -377,7 +377,7 @@
               </p>
               <p>Let us be social</p>
               <div class="footer-social d-flex align-items-center">
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/Metaloop-Technologies-102723648932975"><i class="fa fa-facebook"></i></a>
                 <a href="https://twitter.com/MetaloopT"
                   ><i class="fa fa-twitter"></i
                 ></a>
