--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">Ravi Rajput</h5>
+                    <h5 class="card-title">Ravi</h5>
                     <p class="card-text">Co Founder</p>
                   </div>
                 </div>
