--- a/index.html
+++ b/index.html
@@ -80,11 +80,7 @@
             <h6>We are developers</h6>
             <h1>We Work On Your Ideas</h1>
             <p>
-              We are bunch of thinkers, Designers and techies on an aim to
-              delivering great Websites and E-commerce Solutions to speed up
-              your business presence digitally. Whether you are a non-profit or
-              a growing business you know the impact a website can make in this
-              era. Website give your company a digital identity.
+              We are a bunch of thinkers, Designers, and techies with an aim to deliver great Websites and E-commerce Solutions to speed up your business presence digitally. Whether you are a non-profit organization or a growing business you know the impact a website can make in this era. The website gives your company a digital identity.
             </p>
             <a href="portfolio.html" class="primary-btn text-uppercase"
               >View Our Work
