--- a/index.html
+++ b/index.html
@@ -105,10 +105,7 @@
             <div class="single-defination">
               <h4 class="mb-20">Our Specialties</h4>
               <p>
-                We are completely dynamic towards our client, we work as per
-                requirement. we have the best professionals who not just
-                understand our business process but also have mastered their
-                respective fields of art
+                We are completely dynamic towards our client, we work as per the requirement. we have the best professionals who do not just understand your business process but also recommend the best method to grow the business.
               </p>
             </div>
           </div>
@@ -116,11 +113,7 @@
             <div class="single-defination">
               <h4 class="mb-20">Transparency In Work</h4>
               <p>
-                We follow a set pattern and an methodology to conduct our tasks
-                more understandable. The work of each of our projects is divided
-                into phases. In the process, we ensure complete transparency and
-                communication with clients. Which help us to deliver a perfect
-                product which u wished for
+                We follow a set pattern and a methodology to conduct our tasks more understandable. The work of each of our projects is divided into phases. In the process, we ensure complete transparency and communication with clients. This assists us to deliver the perfect product which you looking for.
               </p>
             </div>
           </div>
