--- a/ecommerce-services.html
+++ b/ecommerce-services.html
@@ -407,7 +407,7 @@
                   <a class="whitolo" href="socialmedia-services.html"
                     ><li>Social Media Services</li></a
                   >
-                  <a class="whitolo" href="amzservices.html"
+                  <a class="whitolo" href="ecommerce-services.html"
                     ><li>Ecommerce Services</li></a
                   >
                   <a class="whitolo" href="amzservices.html"
