--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <div class="title text-center">
               <h1 class="mb-10">Our Latest Projects</h1>
               <p>
-                We have done tons of projects till the date and we give our best
+                We have done many projects till the date and we give our best
                 in each of them some examples are as below
               </p>
             </div>
@@ -338,34 +338,6 @@
               </div>
               <div class="p-inner">
                 <h4>labelcrescent</h4>
-                <div class="cat">Wordpress</div>
-              </div>
-            </div>
-            <!-- ----------------------------------- -->
-            <div class="single-portfolio col-sm-4 all wordpress">
-              <div class="relative">
-                <div class="thumb">
-                  <div class="overlay overlay-bg"></div>
-                  <img
-                    class="image img-fluid"
-                    src="img/p-5.png"
-                    alt="Stubborn Factory"
-                  />
-                </div>
-                <a
-                  clicktracking="off"
-                  href="https://stubbornfactory.com"
-                  target="_blank"
-                >
-                  <div class="middle">
-                    <div class="text align-self-center d-flex">
-                      <img src="img/preview.png" alt="" />
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="p-inner">
-                <h4>Stubborn Factory</h4>
                 <div class="cat">Wordpress</div>
               </div>
             </div>
